[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "web-in-python-lol"
version = "0.2.2"
authors = [
  { name="Basel Ezzat", email="lmcteam206@gmail.com" },
]
description = "A responsive, Python-only UI engine for rapid dashboards"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]